--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 							    <a href="#slide1">
 							    </a>
 							    <div data-scroll-reveal="enter bottom but wait 0.7s" class="slider-detils">
-							    	<h3>We Design <label>Creative Website</label> For Enterprising People</h3>
-							    	<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>
+							    	<h3>SimonHu <label>Person Website</label> </h3>
+							    	<!--<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>-->
 							    	<a class="slide-btn" href="#">View Projects</a>
 							    </div>
 							  </li>
@@ -118,8 +118,8 @@
 							    <a href="#slide2">
 							    </a>
 							      <div data-scroll-reveal="enter bottom but wait 1s" class="slider-detils">
-							    	<h3>We Design <label>Creative Website</label> For Enterprising People</h3>
-							    	<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>
+							    	<h3>SimonHu <label>Person Website</label> </h3>
+							    	<!--<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>-->
 							    	<a class="slide-btn" href="#">View Projects</a>
 							    </div>
 							  </li>
@@ -127,8 +127,8 @@
 							    <a href="#slide3">
 							    </a>
 							      <div data-scroll-reveal="enter bottom but wait 1.5s" class="slider-detils">
-							    	<h3>We Design <label>Creative Website</label> For Enterprising People</h3>
-							    	<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>
+							    	<h3>SimonHu <label>Person Website</label> </h3>
+							    	<!--<span>Lorem ipsum dolor sit amet, consectetur adipisc ing elit.<i> Aliquam viverra consectetur nibh a blan dit. Proin at amet consectetur adipisc lacinia nunc.</i></span>-->
 							    	<a class="slide-btn" href="#">View Projects</a>
 							    </div>
 							  </li>
@@ -147,25 +147,25 @@
 								<div data-scroll-reveal="enter top over 0.7s after 0.7s" class="top-grid">
 									<a class="icon1" href="#"><span> </span></a>
 									<h4><a href="#">Mobile Ready</a></h4>
-									<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p>
+									<!-- <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p> -->
 									<a class="btn" href="#">Read  More</a>
 								</div>
 								<div data-scroll-reveal="enter top over 0.7s after 0.7s" class="top-grid">
 									<a class="icon2" href="#"><span> </span></a>
 									<h4><a href="#">HTML5 Valid</a></h4>
-									<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p>
+									<!-- <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p> -->
 									<a class="btn" href="#">Read  More</a>
 								</div>
 								<div data-scroll-reveal="enter top over 0.7s after 0.7s" class="top-grid">
 									<a class="icon3" href="#"><span> </span></a>
 									<h4><a href="#">CSS3 Magic</a></h4>
-									<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p>
+									<!-- <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p> -->
 									<a class="btn" href="#">Read  More</a>
 								</div>
 								<div data-scroll-reveal="enter top over 0.7s after 0.7s" class="top-grid">
 									<a class="icon4" href="#"><span> </span></a>
 									<h4><a href="#">Amazing design</a></h4>
-									<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p>
+									<!-- <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh a blan.</p> -->
 									<a class="btn" href="#">Read  More</a>
 								</div>
 								<div class="clear"> </div>
@@ -230,7 +230,7 @@
 									</div>
 									<div class="artical-info">
 										<label class="poston">January 11, 2014</label>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p>
+										<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p> -->
 									</div>
 								</div>
 								<div data-scroll-reveal="enter bottom but wait 0.7s" class="artical-grid">
@@ -240,7 +240,7 @@
 									</div>
 									<div class="artical-info">
 										<label class="poston">January 11, 2014</label>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p>
+										<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p> -->
 									</div>
 								</div>
 								<div data-scroll-reveal="enter bottom but wait 0.7s" class="artical-grid">
@@ -250,7 +250,7 @@
 									</div>
 									<div class="artical-info">
 										<label class="poston">January 11, 2014</label>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p>
+										<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing. Aliquam viverra   dolor sit consectetur.</p> -->
 									</div>
 								</div>
 								<div class="clear"> </div>
@@ -298,7 +298,7 @@
 						</div>
 						<div class="footer-bottom">
 							<div class="wrap">
-								<p>Template 2014</p>
+								<p></p>
 							</div>
 						</div>
 					</div>
@@ -306,6 +306,5 @@
 					 
 			</div>
 		<!---//End-wrap---->
-<!-- <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>-->
 </body>
 </html>
