--- a/introduction.html
+++ b/introduction.html
@@ -9,8 +9,8 @@
 </body>
 </html>
 
-<script src="./SimonHu _ Home_files/pdfjs/build/pdf.js"></script>
-<script src="./SimonHu _ Home_files/jquery.min.js"></script>
+<script src="js/pdfjs/build/pdf.js"></script>
+<script src="js/jquery.min.js"></script>
 <script type="text/javascript">
 	$(function(){
 		pdfView();
