--- a/introduction.html
+++ b/introduction.html
@@ -17,7 +17,7 @@
 		 //源文件显示
 		function pdfView(){
                 var pdfurl ="https://simonhu1993.github.io/images/胡志杨的简历.pdf";
-                var url ="./SimonHu _ Home_files/pdfjs/web/viewer.html?file="+encodeURIComponent(pdfurl);
+                var url ="js/pdfjs/web/viewer.html?file="+encodeURIComponent(pdfurl);
                 $('#the-canvas').attr('src',url);
             }
 	})
