--- a/testdownload.html
+++ b/testdownload.html
@@ -23,7 +23,7 @@
 <body>
   <div >
 
-    <a class="btn" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/SimonHu1993/zhxapptest/master/ios/zhx/gw.plist">立即下载</a>
+    <a class="btn" href="itms-services://?action=download-manifest&url=https://simonhu1993.github.io/gw.plist">立即下载</a>
   </div>
 </body>
 </html>
