--- a/520.html
+++ b/520.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Rose</title>
+    <title>520</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body style="background:#000;margin:0;padding:0;">
@@ -65,6 +66,7 @@
             cursor: pointer;
             opacity: 0; /* 隐藏元素 */
             animation: fadeIn 2s ease-in-out forwards; /* 使用 CSS 动画 */
+            margin-left: 12%;
         }
         button:hover{
             background: #fff;
@@ -87,7 +89,7 @@
         <p>&ensp;&ensp;&ensp;&ensp;一场顺风车旅行，让你我相遇，或许这就是命运的注定；因为你的微笑和欢语，让这我孤寂的旅程充满欢声笑语；我喜欢你浅浅的笑脸，感觉世界都因此甜蜜；每次和你的相遇都会有着小小的插曲，是紧张导航错地址让你在大雨倾盆下淋成了落汤鸡，是第一次约会好几次转向错误的目的地，但可能这就是因为磁场的感应，让我暂时失去了理性。你的每一个微笑都那么温暖，想每天都听到你的声音，记下你说过的每句话；想见你熟悉的脸，记下你的温暖微笑；每次看到你的笑容，我的心都会跳动。我很幸运能够认识你，并希望能够和你一起走过人生的每一步!</p>
         <p>&ensp;&ensp;&ensp;&ensp;因为我喜欢你，所以我想问你：愿意做我的女朋友吗？</p>
         <button onclick="alert('么么哒！😘')">是的，我愿意!</button>
-        <button onclick="alert('谢谢你的诚实，我们可以继续做好朋友。😌')">我只想做好朋友。</button>
+        <button onclick="alert('谢谢你的诚实，我们可以继续做好朋友。😊')">我只想做好朋友。</button>
     </div>
 <script>
     var b = document.body;
