--- a/520.html
+++ b/520.html
@@ -104,8 +104,8 @@
            
     </div>
     <div id="w2" class="vert-center text-center" style="height:64rpx;">
-            <button onclick="alert('么么哒！😘')">是的，我愿意!</button>
-            <button onclick="alert('谢谢你的诚实，我们可以继续做好朋友。😊')">我只想做好朋友。</button>
+            <button onclick="alert('💐那周珊珊现在是胡志杨的女朋友啦，么么哒！😘')">是的，我愿意!</button>
+            <button onclick="alert('🔞答案错误，请选择【是的，我愿意！】⛔️')">我只想做好朋友。</button>
         </div> 
 <script>
     var b = document.body;
