--- a/520.html
+++ b/520.html
@@ -77,14 +77,7 @@
             to {opacity: 1;}
         }
 
-        .vert-center{
-            position:absolute;
-            top:87rem;
-            bottom:0;
-            left: 0;
-            margin: auto;
-            right: 0;
-        }
+       
         .text-center{
             text-align:center;//实现水平居中
         }
@@ -103,7 +96,7 @@
         <p>&ensp;&ensp;&ensp;&ensp;因为我喜欢你，所以我想问你：愿意做我的女朋友吗？</p>
            
     </div>
-    <div id="w2" class="vert-center text-center" style="height:64rpx;">
+    <div id="w2" class="text-center" style="height:64rpx;">
             <button onclick="alert('💐那周珊珊现在是胡志杨的女朋友啦，么么哒！😘')">是的，我愿意!</button>
             <button onclick="alert('🔞答案错误，请选择【是的，我愿意！】⛔️')">我只想做好朋友。</button>
         </div> 
