--- a/520.html
+++ b/520.html
@@ -97,7 +97,7 @@
            
     </div>
     <div id="w2" class="text-center" style="height:64rpx;">
-            <button onclick="alert('💐那周珊珊现在是胡志杨的女朋友啦，么么哒！😘')">是的，我愿意!</button>
+            <button onclick="alert('💐那现在开始周珊珊是胡志杨的女朋友啦，么么哒！😘')">是的，我愿意!</button>
             <button onclick="alert('🔞答案错误，请选择【是的，我愿意！】⛔️')">我只想做好朋友。</button>
         </div> 
 <script>
